--- a/NeighbourhoodAR/build.gradle
+++ b/NeighbourhoodAR/build.gradle
@@ -20,11 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-places:15.0.1'
-    compile 'com.google.android.gms:play-services-location:15.0.1'
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    api 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.android.support:appcompat-v7:25.3.1'
 }
